--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <string name="app_name">DLA tree</string>
-    <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="action_save_image">Save image</string>
 
 </resources>
