--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -4,5 +4,14 @@
     <string name="app_name">Броуновское дерево</string>
     <string name="action_settings">Настройки</string>
     <string name="action_save_image">Сохранить картинку</string>
+    <string name="start">Старт</string>
+    <string name="stop">Стоп</string>
+    <string name="pause">Пауза</string>
+    <string name="resume">Возобновить</string>
+    <string name="reset">Сброс</string>
+    <string name="palette_shift">Сдвиг палитры</string>
+    <string name="palette_coeff">Коэффициент палитры</string>
+    <string name="iterations_number">Число итераций</string>
+    <string name="ok">ОК</string>
 
 </resources>
